--- a/docs/4.0.0-alpha.6/assets/css/docs.css
+++ b/docs/4.0.0-alpha.6/assets/css/docs.css
@@ -675,7 +675,7 @@ h4 > code {
 
 .cf-footer {
   padding: .75rem 0;
-  font-size: 85%;
+  font-size: 0.875rem;
   text-align: center;
   background-color: #eff1f3;
   border-top: 2px solid #424f5b;
