Forms: Update name of validtion icon setting

--- a/scss/_settings-options.scss
+++ b/scss/_settings-options.scss
@@ -72,6 +72,7 @@ $enable-form-inline:                        true !default;
 $enable-form-validation:                    true !default;
 $enable-form-validation-feedback:           true !default;
 $enable-form-validation-tooltip:            true !default;
+$enable-form-validation-icon:               true !default;
 
 // Alert
 $enable-alert:                              true !default;
