add side modals

--- a/scss/_settings-options.scss
+++ b/scss/_settings-options.scss
@@ -189,6 +189,8 @@ $enable-dropdown-back:                      true !default;
 $enable-modal:                              true !default;
 $enable-modal-centered:                     true !default;
 $enable-modal-scrollable:                   true !default;
+$enable-modal-side-start:                   true !default;
+$enable-modal-side-end:                     true !default;
 $enable-modal-header:                       true !default;
 $enable-modal-title:                        true !default;
 $enable-modal-body:                         true !default;
