--- a/site/_includes/partials/footer.liquid
+++ b/site/_includes/partials/footer.liquid
@@ -2,7 +2,7 @@
     <div class="container">
 
         <ul class="list list-horizontal">
-            <li class="pe-0_25"><a href="{{ site.baseurl }}/about/overview/">About</a></li>
+            <li class="pe-0_25"><a href="{{ site.path}}/about/overview/">About <span class="sr-only">Figuration</span></a></li>
             <li class="px-0_25"><a href="{{ site.repo }}">GitHub</a></li>
             <li class="ps-0_25"><a href="{{ site.twitter }}">Twitter</a></li>
         </ul>
@@ -20,7 +20,7 @@
             <p class="font-weight-bold mb-0_25">Funding generously provided by:</p>
             <div class="media">
                 <div class="d-flex me-0_5">
-                    <img src="{{ site.baseurl }}/assets/aem/aem-logo.png" width="40" height="40" alt="AEM logo" />
+                    <img src="/assets/aem/aem-logo.png" width="40" height="40" alt="AEM logo" />
                 </div>
                 <div class="media-body">
                     <span class="font-weight-bold"><a href="http://aem.cast.org/">National Center on Accessible Educational Materials at CAST, Inc.</a></span><br />
