--- a/site/_includes/partials/head_favicon.liquid
+++ b/site/_includes/partials/head_favicon.liquid
@@ -1,10 +1,10 @@
 <!-- Favicons -->
-<link sizes="180x180" rel="apple-touch-icon" href="{{ site.baseurl }}/assets/favicon/apple-touch-icon.png"/>
-<link sizes="32x32" rel="icon" href="{{ site.baseurl }}/assets/favicon/favicon-32x32.png" type="image/png"/>
-<link sizes="16x16" rel="icon" href="{{ site.baseurl }}/assets/favicon/favicon-16x16.png" type="image/png"/>
-<link rel="manifest" href="{{ site.baseurl }}/assets/favicon/site.webmanifest"/>
-<link color="#5bbad5" rel="mask-icon" href="{{ site.baseurl }}/assets/favicon/safari-pinned-tab.svg"/>
-<link rel="shortcut icon" href="{{ site.baseurl }}/assets/favicon/favicon.ico"/>
+<link sizes="180x180" rel="apple-touch-icon" href="{{ site.path }}/assets/favicon/apple-touch-icon.png"/>
+<link sizes="32x32" rel="icon" href="{{ site.path }}/assets/favicon/favicon-32x32.png" type="image/png"/>
+<link sizes="16x16" rel="icon" href="{{ site.path }}/assets/favicon/favicon-16x16.png" type="image/png"/>
+<link rel="manifest" href="{{ site.path }}/assets/favicon/site.webmanifest"/>
+<link color="#5bbad5" rel="mask-icon" href="{{ site.path }}/assets/favicon/safari-pinned-tab.svg"/>
+<link rel="shortcut icon" href="{{ site.path }}/assets/favicon/favicon.ico"/>
 <meta name="msapplication-TileColor" content="#117cba"/>
-<meta name="msapplication-config" content="{{ site.baseurl }}/assets/favicon/browserconfig.xml"/>
+<meta name="msapplication-config" content="{{ site.path }}/assets/favicon/browserconfig.xml"/>
 <meta name="theme-color" content="#ffffff"/>
