--- a/site/_includes/partials/skiplink.liquid
+++ b/site/_includes/partials/skiplink.liquid
@@ -1,1 +1,1 @@
-<a class="skipnav sr-only-focusable" href="#content">Skip to main content</a>
+<a class="skiplink sr-only-focusable" href="#content">Skip to main content</a>
