--- a/site/_includes/partials/footer.html
+++ b/site/_includes/partials/footer.html
@@ -1,7 +1,7 @@
 <footer class="cf-footer bg-light fs-small py-1">
     <div class="container">
 
-        <ul class="list list-horizontal">
+        <ul class="list list-horizontal font-weight-bold">
             <li class="pe-0_25"><a href="{{ site.path}}/about/overview/">About <span class="sr-only">Figuration</span></a></li>
             <li class="px-0_25"><a href="{{ site.repo }}">GitHub</a></li>
             <li class="ps-0_25"><a href="{{ site.twitter }}">Twitter</a></li>
