--- a/site/_includes/partials/head.html
+++ b/site/_includes/partials/head.html
@@ -19,8 +19,8 @@
 
 <link rel="canonical" href="{{site.url }}{{ page.url }}">
 
-{% include ./partials/head_favicon.liquid %}
-{%- include ./partials/head_social.liquid %}
-{%- include ./partials/head_analytics.liquid %}
-{%- include ./partials/head_styles.liquid %}
-{%- include ./partials/head_scripts.liquid %}
+{% include ./partials/head_favicon.html %}
+{%- include ./partials/head_social.html %}
+{%- include ./partials/head_analytics.html %}
+{%- include ./partials/head_styles.html %}
+{%- include ./partials/head_scripts.html %}
