--- a/site/_includes/partials/settings_menu.html
+++ b/site/_includes/partials/settings_menu.html
@@ -1,6 +1,6 @@
 <div class="dropdown dropend">
     <a href="#" role="button" class="nav-link px-0_5" aria-label="Settings" title="Settings" data-cfw="dropdown">
-        {% include icons/cog.svg, class: "cf-header-icon" %}
+        {% include icons/cog.svg, width: "1rem", height: "1rem" %}
     </a>
     <ul class="dropdown-menu">
         <li class="dropdown-header">Direction</li>
