--- a/site/4.0/assets/css/docs.css
+++ b/site/4.0/assets/css/docs.css
@@ -44,10 +44,8 @@
   line-height: .75;
 }
 
-.cf-header-icon {
-  display: inline-block;
-  width: 1rem;
-  height: 1rem;
+.home-icons {
+  white-space: nowrap;
 }
 
 .home-icons .far,
@@ -85,6 +83,7 @@
   padding: 2rem 1.5rem;
   margin-bottom: 2rem;
   color: rgba(255, 255, 255, 0.9);
+  background-color: #0f6a9e;
   background-image: linear-gradient(135deg, #0c5782 0%, #117cba 100%);
 }
 
@@ -123,15 +122,31 @@
   margin-bottom: .25rem;
   font-weight: 600;
   color: #fff;
-  background-color: rgba(255, 255, 255, 0.15);
-  border-color: rgba(255, 255, 255, 0.8);
+  background-color: #2a75a0;
+  border-color: #dee;
   border-width: 2px;
   box-shadow: 2px 2px 0.2rem rgba(0, 0, 0, 0.35);
 }
 
 .btn-start:hover, .btn-start:focus {
   color: #222;
-  background-color: rgba(255, 255, 255, 0.9);
+  background-color: #e7f0f5;
+}
+
+.cf-feed {
+  padding: 2rem 0;
+  margin-top: 2rem;
+  text-align: center;
+  background-color: #0f6a9e;
+  background-image: linear-gradient(135deg, #117cba 0%, #0c5782 100%);
+}
+
+.cf-feed a {
+  color: rgba(255, 255, 255, 0.9);
+}
+
+.cf-feed a:hover, .cf-feed a:focus {
+  color: white;
 }
 
 .cf-content {
@@ -159,4 +174,125 @@ h2 > code,
 h3 > code,
 h4 > code {
   font-weight: 500;
+}
+
+code[class*="language-"],
+pre[class*="language-"] {
+  font-family: Consolas, "Bitstream Vera Sans Mono", "Courier New", Courier, monospace;
+  -webkit-hyphens: none;
+      -ms-hyphens: none;
+          hyphens: none;
+  line-height: 1.25;
+  color: #3f3f3f;
+  text-align: left;
+  word-break: normal;
+  word-spacing: normal;
+  -moz-tab-size: 4;
+    -o-tab-size: 4;
+       tab-size: 4;
+  white-space: pre;
+  direction: ltr;
+}
+
+pre[class*="language-"]::-moz-selection,
+pre[class*="language-"] ::-moz-selection,
+code[class*="language-"]::-moz-selection,
+code[class*="language-"] ::-moz-selection {
+  background: #b3d4fc;
+}
+
+pre[class*="language-"]::selection,
+pre[class*="language-"] ::selection,
+code[class*="language-"]::selection,
+code[class*="language-"] ::selection {
+  background: #b3d4fc;
+}
+
+/* Code blocks */
+pre[class*="language-"] {
+  padding: 1.65rem 1rem .5rem;
+  margin-bottom: 1rem;
+  overflow: auto;
+  background-color: #f8f8f8;
+  border: 1px solid #e1e1e8;
+  border-radius: 0.25rem;
+}
+
+/* Inline code */
+:not(pre) > code[class*="language-"] {
+  padding: 1.65rem 1rem .5rem;
+  background-color: #f8f8f8;
+  border: 1px solid #e1e1e8;
+  border-radius: 0.25rem;
+}
+
+.token.comment,
+.token.prolog,
+.token.doctype,
+.token.cdata {
+  font-style: italic;
+  color: #707070;
+}
+
+.token.namespace {
+  opacity: .7;
+}
+
+.token.string,
+.token.attr-value {
+  color: #dd0f54;
+}
+
+.token.punctuation,
+.token.operator {
+  color: #393a34;
+  /* no highlight */
+}
+
+.token.entity,
+.token.url,
+.token.symbol,
+.token.number,
+.token.boolean,
+.token.variable,
+.token.constant,
+.token.property,
+.token.regex,
+.token.inserted {
+  color: #36acaa;
+}
+
+.token.atrule,
+.token.attr-name,
+.language-autohotkey .token.selector {
+  color: #007b97;
+}
+
+.token.keyword {
+  color: #dd0f54;
+}
+
+.token.function {
+  color: #2f6f9f;
+}
+
+.token.deleted,
+.language-autohotkey .token.tag {
+  color: #9a050f;
+}
+
+.token.tag,
+.token.selector,
+.language-autohotkey .token.keyword {
+  color: #01b;
+}
+
+.token.important,
+.token.function,
+.token.bold {
+  font-weight: 700;
+}
+
+.token.italic {
+  font-style: italic;
 }
