--- a/site/4.0/assets/scss/docs.scss
+++ b/site/4.0/assets/scss/docs.scss
@@ -9,6 +9,8 @@ $docs-primary:          #246;
 @import "skiplink";
 @import "notification";
 @import "topnav";
+@import "footer";
+@import "toplink";
 @import "home";
 @import "content";
 @import "syntax";
