--- a/site/_includes/layouts/doc.html
+++ b/site/_includes/layouts/doc.html
@@ -8,9 +8,31 @@
 {% include ./partials/notification.html %}
 {% include ./partials/topnav.html %}
 
-<main id="content" class="cf-content">
-{{ content }}
-</main>
+<div class="container-fluid">
+    <div class="row">
+        <div class="col-md-3 col-xl-2 cf-sidebar">
+            {% comment %}
+            {% include nav-sidebar.html %}
+            {% endcomment %}
+        </div>
+        <main class="col-md-9 col-xl-8 cf-content" role="main">
+            <h1 class="cf-title" id="content">
+                {{ page.title }}
+                {% if page.subtitle %}
+                    <small class="text-muted">{{ page.subtitle }}</small>
+                {% endif %}
+            </h1>
+
+            <p class="fs-large">{{ page.description }}</p>
+
+            {{ content }}
+        </main>
+    </div>
+
+    <div class="toplink">
+        <a href="#content">Top of Page <span class="caret"></span></a>
+    </div>
+</div>
 
 {% include ./partials/footer.html -%}
 
