--- a/site/_includes/partials/footer.html
+++ b/site/_includes/partials/footer.html
@@ -1,14 +1,15 @@
 <footer class="cf-footer bg-light fs-small py-1">
     <div class="container">
-
         <ul class="list list-horizontal font-weight-bold">
-            <li class="pe-0_25"><a href="{{ site.path}}/about/overview/">About <span class="sr-only">Figuration</span></a></li>
-            <li class="px-0_25"><a href="{{ site.repo }}">GitHub</a></li>
-            <li class="ps-0_25"><a href="{{ site.twitter }}">Twitter</a></li>
+            <li class="pe-0_5"><a href="{{ site.path}}/about/overview/">About <span class="sr-only">Figuration</span></a></li>
+            <li class="px-0_5"><a href="{{ site.repo }}">GitHub</a></li>
+            <li class="ps-0_5"><a href="{{ site.twitter }}">Twitter</a></li>
         </ul>
         <p>
+            <strong>Current version:</strong> {{ site.version.current }}
+            <br>
             &copy; 2013-{{ 'now' | date: "%Y" }} <a href="http://www.cast.org/">CAST, Inc.</a>
-            <br />
+            <br>
             Portions: &copy; 2011-2019 the Bootstrap Authors and Twitter, Inc. Licensed under <a href="https://github.com/twbs/bootstrap/blob/master/LICENSE">the MIT license</a> or <a href="https://creativecommons.org/licenses/by/3.0/">CC BY 3.0</a>.
         </p>
         <p>
@@ -18,7 +19,8 @@
 
         <div class="border-t pt-1">
             <p class="font-weight-bold mb-0_25">Funding generously provided by:</p>
-            <div class="media">
+            <div class="row">
+            <div class="media col">
                 <div class="d-flex me-0_5">
                     <img src="/assets/aem/aem-logo.png" width="40" height="40" alt="AEM logo" />
                 </div>
@@ -26,6 +28,9 @@
                     <span class="font-weight-bold"><a href="http://aem.cast.org/">National Center on Accessible Educational Materials at CAST, Inc.</a></span><br />
                     <small>Disclaimer: This does not necessarily represent endorsement by or the policies of the National Center on Accessible Educational Materials, the US Department of Education, and the US Federal Government.</small>
                 </div>
+            </div>
+            <div class="col-md-auto">
+                {% include icons/cast-logo.svg, width: "9.645rem", height: "3rem" %}
             </div>
         </div>
     </div>
