--- a/site/4.0/assets/scss/_skiplink.scss
+++ b/site/4.0/assets/scss/_skiplink.scss
@@ -1,5 +1,7 @@
+//stylelint-disable declaration-no-important
+
 .skiplink {
-    position: absolute;
+    position: absolute !important;
     top: .25rem;
     left: 50%;
     padding: .25rem .5rem;
