--- a/site/_includes/partials/head.html
+++ b/site/_includes/partials/head.html
@@ -1,6 +1,6 @@
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<meta name="description" content="{{ page.description | default: site.description | smartify }}">
+<meta name="description" content="{{ description | default: site.description | smartify }}">
 <meta name="author" content="{{ site.author }}">
 
 {%- comment -%}
@@ -10,14 +10,14 @@
 {%- endcomment -%}
 
 <title>
-  {%- if page.layout == "home" -%}
+  {%- if layout == "home" -%}
     {{ site.title }} - {{ site.description }}
   {%- else -%}
     {{ title }} &#124; {{ site.title }}
   {%- endif -%}
 </title>
 
-<link rel="canonical" href="{{site.url }}{{ page.url }}">
+<link rel="canonical" href="{{site.url }}{{ url }}">
 
 {% include ./partials/head_favicon.html %}
 {%- include ./partials/head_social.html %}
