--- a/site/_includes/partials/topnav.html
+++ b/site/_includes/partials/topnav.html
@@ -6,25 +6,25 @@
     <button class="navbar-toggle me-0_5" type="button" data-cfw="collapse" data-cfw-collapse-target="#cf-topnav" aria-label="Toggle navigation">
         <span class="cf-header-menu" aria-hidden="true">&#8801;</span>
     </button>
-    <nav class="navbar-collapse collapse order-last order-lg-unordered text-nowrap" id="cf-topnav" aria-label="Sections">
+    <nav class="navbar-collapse collapse order-last order-lg-unordered text-nowrap" id="cf-topnav" aria-label="Main">
         <ul class="navbar-nav">
             <li class="nav-item">
-                <a href="{{ site.path }}/{{ site.version.path }}/get-started/quick-start/" class="nav-link {% if page.group == "get-started" %}active{% endif %}">Get Started{% if page.group == "get-started" %} <span class="sr-only">(current section)</span>{% endif %}</a>
+                <a href="{{ site.path }}/{{ site.version.path }}/get-started/quick-start/" class="nav-link {% if group == "get-started" %}active{% endif %}">Get Started{% if group == "get-started" %} <span class="sr-only">(current section)</span>{% endif %}</a>
             </li>
             <li class="nav-item">
-                <a href="{{ site.path }}/{{ site.version.path }}/layout/overview/" class="nav-link {% if page.group == "layout" %}active{% endif %}">Layout{% if page.group == "layout" %} <span class="sr-only">(current section)</span>{% endif %}</a>
+                <a href="{{ site.path }}/{{ site.version.path }}/layout/overview/" class="nav-link {% if group == "layout" %}active{% endif %}">Layout{% if group == "layout" %} <span class="sr-only">(current section)</span>{% endif %}</a>
             </li>
             <li class="nav-item">
-                <a href="{{ site.path }}/{{ site.version.path }}/content/reboot/" class="nav-link {% if page.group == "content" %}active{% endif %}">Content{% if page.group == "content" %} <span class="sr-only">(current section)</span>{% endif %}</a>
+                <a href="{{ site.path }}/{{ site.version.path }}/content/reboot/" class="nav-link {% if group == "content" %}active{% endif %}">Content{% if group == "content" %} <span class="sr-only">(current section)</span>{% endif %}</a>
             </li>
             <li class="nav-item">
-                <a href="{{ site.path }}/{{ site.version.path }}/components/alerts/" class="nav-link {% if page.group == "components" %}active{% endif %}">Components{% if page.group == "components" %} <span class="sr-only">(current section)</span>{% endif %}</a>
+                <a href="{{ site.path }}/{{ site.version.path }}/components/alerts/" class="nav-link {% if group == "components" %}active{% endif %}">Components{% if group == "components" %} <span class="sr-only">(current section)</span>{% endif %}</a>
             </li>
             <li class="nav-item">
-                <a href="{{ site.path }}/{{ site.version.path }}/utilities/borders/" class="nav-link {% if page.group == "utilities" %}active{% endif %}">Utilities{% if page.group == "utilities" %} <span class="sr-only">(current section)</span>{% endif %}</a>
+                <a href="{{ site.path }}/{{ site.version.path }}/utilities/borders/" class="nav-link {% if group == "utilities" %}active{% endif %}">Utilities{% if group == "utilities" %} <span class="sr-only">(current section)</span>{% endif %}</a>
             </li>
             <li class="nav-item">
-                <a href="{{ site.path }}/{{ site.version.path }}/widgets/overview/" class="nav-link {% if page.group == "widgets" %}active{% endif %}">Widgets{% if page.group == "widgets" %} <span class="sr-only">(current section)</span>{% endif %}</a>
+                <a href="{{ site.path }}/{{ site.version.path }}/widgets/overview/" class="nav-link {% if group == "widgets" %}active{% endif %}">Widgets{% if group == "widgets" %} <span class="sr-only">(current section)</span>{% endif %}</a>
             </li>
         </ul>
     </nav>
