--- a/site/4.0/assets/scss/docs.scss
+++ b/site/4.0/assets/scss/docs.scss
@@ -12,5 +12,7 @@ $docs-primary:          #246;
 @import "footer";
 @import "toplink";
 @import "home";
+@import "docsearch";
+@import "sidebar";
 @import "content";
 @import "syntax";
