--- a/site/_includes/partials/footer.html
+++ b/site/_includes/partials/footer.html
@@ -1,4 +1,4 @@
-<footer class="cf-footer bg-light fs-small py-1">
+<footer class="cf-footer fs-small py-1">
     <div class="container">
         <ul class="list list-horizontal font-weight-bold">
             <li class="pe-0_5"><a href="{{ site.path}}/about/overview/">About <span class="sr-only">Figuration</span></a></li>
