--- a/site/_includes/partials/sidebar-nav.html
+++ b/site/_includes/partials/sidebar-nav.html
@@ -1,34 +1,47 @@
 {% if site.environment == "production" -%}
 <form class="cf-search" role="search">
-    <input type="search" class="docsearch form-control form-control-sm" id="docsearch" placeholder="Search docs..." aria-label="Search the documentation" data-docs-version="{{ site.docs_version }}"/>
+    <input type="search" class="docsearch form-control form-control-sm" id="docsearch" placeholder="Search docs..." aria-label="Search the documentation" data-docs-version="{{ site.version.docs }}"/>
 </form>
 {%- endif %}
 
+{%- assign page_slug = page.url | pathLast -%}
 <nav class="cf-links" aria-label="Section">
-{% for navgroup in nav -%}
-  {%- assign group_slug = navgroup.title | slug -%}
-  {%- assign page_slug = page.url | pathLast -%}
-
-  {% if group == group_slug %}
-    <div class="h4 cf-sidebar-header">{{ navgroup.title }}</div>
-    <ul class="nav flex-column">
-      {% for doc in navgroup.pages %}
-        {%- assign doc_slug = doc.title | slug -%}
-        {%- assign active = nil -%}
-        {%- assign current = nil -%}
-        {%- if doc_slug == page_slug -%}
-          {%- assign active = 'active' -%}
-          {%- assign current = '<span class="sr-only">(current page)</span>' -%}
-        {%- endif -%}
-        <li class="nav-item">
-          {%- if group == 'about' -%}
-              <a href="{{ site.baseurl }}/{{ group_slug }}/{{ doc_slug }}/" class="nav-link {{ active }}"> {{ doc.title }} {{ current }}</a>
-            {%- else -%}
-              <a href="{{ site.baseurl }}/{{ site.docs_version }}/{{ group_slug }}/{{ doc_slug }}/" class="nav-link {{ active }}"> {{ doc.title }} {{ current }}</a>
+  <ul class="list-unstyled">
+    {% for navgroup in nav -%}
+    {%- assign current_sect = nil -%}
+    {%- assign group_slug = navgroup.title | slug -%}
+    {%- assign first_slug = navgroup.pages[0].title | slug -%}
+    {%- assign page_count = navgroup.pages | size -%}
+    {% if group == group_slug %}
+      {%- assign current_sect = ' <span class="sr-only">(current section)</span>' -%}
+    {%- endif -%}
+    <li class="mb-0_25{% if page_count > 0 %} has-children{% endif %}">
+      <a href="{{ site.path }}/{{ site.version.path }}/{{ group_slug }}/{{ first_slug }}/" class="cf-sidebar-header fs-large{% if group == group_slug %} active open{% endif %}" data-cfw="collapse" data-cfw-collapse-target="#sidenav{{ forloop.index }}">
+          {%- if page_count > 0 -%}<span class="caret" aria-hidden="true"></span>{%- endif -%}
+          <span class="cf-sidebar-header-title">{{- navgroup.title -}}</span>
+          {{- current_sect -}}
+      </a>
+      <div id="sidenav{{ forloop.index }}">
+        <ul class="nav flex-column mb-0">
+          {% for doc in navgroup.pages %}
+            {%- assign doc_slug = doc.title | slug -%}
+            {%- assign active = nil -%}
+            {%- assign current_page = nil -%}
+            {%- if doc_slug == page_slug and group == group_slug-%}
+              {%- assign active = 'active' -%}
+              {%- assign current_page = ' <span class="sr-only">(current page)</span>' -%}
             {%- endif -%}
-        </li>
-      {% endfor -%}
-    </ul>
-  {% endif -%}
-{%- endfor %}
+            <li class="nav-item">
+              {%- if group == 'about' -%}
+                  <a href="{{ site.path }}/{{ group_slug }}/{{ doc_slug }}/" class="nav-link {{ active }}">{{ doc.title }}{{ current_page }}</a>
+                {%- else -%}
+                  <a href="{{ site.path }}/{{ site.version.path }}/{{ group_slug }}/{{ doc_slug }}/" class="nav-link {{ active }}"> {{ doc.title }} {{ current }}</a>
+                {%- endif -%}
+            </li>
+          {% endfor -%}
+        </ul>
+      </div>
+    </li>
+    {%- endfor %}
+  </ul>
 </nav>
