--- a/site/_includes/layouts/doc.html
+++ b/site/_includes/layouts/doc.html
@@ -16,7 +16,7 @@
         <main class="col-md-9 col-xl-8 cf-content" role="main">
             <h1 class="cf-title" id="content">{{ title }}{%if subtitle %} <small class="text-muted">{{ subtitle }}</small>{% endif %}</h1>
 
-            {%if wdescription %}<p class="fs-large">{{ description }}</p>{% endif %}
+            {%if description %}<p class="fs-large font-weight-sbold">{{ description }}</p>{% endif %}
 
             {{ content }}
         </main>
