--- a/site/4.0/assets/scss/_syntax.scss
+++ b/site/4.0/assets/scss/_syntax.scss
@@ -28,7 +28,7 @@ code[class*="language-"] ::selection {
 
 /* Code blocks */
 pre[class*="language-"] {
-    padding: 1.65rem 1rem .5rem;
+    padding: 1.75em 1rem .5rem;
     margin-bottom: 1rem;
     overflow: auto;
     background-color: #f8f8f8;
