re-implement syntax highlight with shorthcodes, fix css maps, more sidebar and toc changes

--- a/site/4.0/assets/css/docs.css
+++ b/site/4.0/assets/css/docs.css
@@ -1,3 +1,4 @@
+@charset "UTF-8";
 .skiplink {
   position: absolute !important;
   top: .25rem;
@@ -397,11 +398,14 @@
 }
 
 .cf-links a {
-  display: inline-block;
-  padding: .125rem .5rem;
-  margin-left: .5rem;
+  display: block;
+  padding: 0;
   color: #424f5b;
   text-decoration: none;
+}
+
+.cf-links a .nav-link-inner {
+  padding: .125rem .5rem;
 }
 
 .cf-links a.active {
@@ -410,6 +414,10 @@
 }
 
 .cf-links a:hover, .cf-links a:focus {
+  outline: 0;
+}
+
+.cf-links a:hover .nav-link-inner, .cf-links a:focus .nav-link-inner {
   color: #fff;
   text-decoration: none;
   background-color: #1680a4;
@@ -443,7 +451,90 @@
 }
 
 .cf-links .has-children .nav-link {
-  margin-left: 1.625rem;
+  margin-left: 1rem;
+}
+
+.cf-toc {
+  padding-left: 1rem;
+}
+
+.cf-toc-list {
+  display: flex;
+  flex-direction: column;
+  min-width: 0;
+  margin-bottom: 1rem;
+  margin-left: 1.25rem;
+  padding-left: 0;
+  list-style: none;
+}
+
+.cf-toc-list .cf-toc-list {
+  padding: 0;
+  margin-bottom: 0;
+  margin-left: 1.25rem;
+  border-left: 0;
+}
+
+.cf-toc-list > .cf-toc-item {
+  list-style: none;
+}
+
+.cf-toc-list > .cf-toc-item::before {
+  position: absolute;
+  margin-left: -1.25rem;
+  content: "● ";
+}
+
+@media (min-width: 75em) {
+  .cf-content > .cf-toc,
+  .cf-toc-header {
+    display: none;
+  }
+}
+
+.cf-toc-side {
+  order: 1;
+  padding-top: 1rem;
+  padding-bottom: 1rem;
+  font-size: 0.9375rem;
+}
+
+.cf-toc-side .cf-toc {
+  padding: .25rem 0;
+  margin: 0;
+  list-style: none;
+  border-left: 1px solid #bfc6cd;
+}
+
+@supports ((position: -webkit-sticky) or (position: sticky)) {
+  .cf-toc-side .cf-toc {
+    position: -webkit-sticky;
+    position: sticky;
+    top: 4.375rem;
+    max-height: calc(100vh - 4.375rem);
+    overflow-x: visible;
+    overflow-y: auto;
+  }
+}
+
+.cf-toc-side .cf-toc-list .cf-toc-list {
+  margin-top: .125rem;
+}
+
+.cf-toc-side .cf-toc-item {
+  margin-bottom: .125rem;
+}
+
+.cf-toc-side .cf-toc-link {
+  padding: .125rem .25rem;
+}
+
+.cf-toc-side .cf-toc-link.active {
+  background-color: #d9e6fc;
+}
+
+.cf-toc-side .cf-toc-list > .cf-toc-item::before {
+  content: none;
 }
 
 .font-weight-sbold {
@@ -533,7 +624,7 @@ pre[class*="language-"] {
   -webkit-hyphens: none;
       -ms-hyphens: none;
           hyphens: none;
-  line-height: 1.25;
+  line-height: 1.375;
   color: #3f3f3f;
   text-align: left;
   word-break: normal;
@@ -559,13 +650,22 @@ code[class*="language-"] ::selection {
   background: #b3d4fc;
 }
 
+code.language-bash::before {
+  color: #009;
+  content: "$ ";
+  -webkit-user-select: none;
+     -moz-user-select: none;
+      -ms-user-select: none;
+          user-select: none;
+}
+
 /* Code blocks */
 pre[class*="language-"] {
   padding: 1.75em 1rem .5rem;
   margin-bottom: 1rem;
   overflow: auto;
-  background-color: #f8f8f8;
-  border: 1px solid #e1e1e8;
+  background-color: #f7f8f9;
+  border: 1px solid #dfe3e6;
   border-radius: 0.25rem;
 }
 
@@ -579,10 +679,13 @@ pre[class*="language-"] {
 
 .token.comment,
 .token.prolog,
-.token.doctype,
 .token.cdata {
   font-style: italic;
   color: #707070;
+}
+
+.token.doctype {
+  color: #007e7e;
 }
 
 .token.namespace {
@@ -646,4 +749,29 @@ pre[class*="language-"] {
 
 .token.italic {
   font-style: italic;
+}
+
+.cf-example {
+  padding: 1rem;
+  background-color: #fff;
+  border: 1px solid #dfe3e6;
+  border-radius: 0.25rem 0.25rem 0 0;
+}
+
+.cf-example + .cf-clipboard + pre[class*="language-"] {
+  border-top: 0;
+  border-top-left-radius: 0;
+  border-top-right-radius: 0;
+}
+
+@media (min-width: 36em) {
+  .cf-example {
+    padding: 1.5rem;
+  }
+}
+
+.cf-example-bottom {
+  margin-bottom: 1rem;
+  border-bottom-right-radius: 0.25rem;
+  border-bottom-left-radius: 0.25rem;
 }
