--- a/site/4.0/assets/scss/docs.scss
+++ b/site/4.0/assets/scss/docs.scss
@@ -14,5 +14,7 @@ $docs-primary:          #246;
 @import "home";
 @import "docsearch";
 @import "sidebar";
+@import "toc";
 @import "content";
 @import "syntax";
+@import "example";
