--- a/site/_includes/partials/version_menu.html
+++ b/site/_includes/partials/version_menu.html
@@ -5,7 +5,7 @@
     </a>
     <ul class="dropdown-menu position-absolute">
         <li class="dropdown-header">Latest</li>
-        <li><a href="{{ site.path }}/{{ site.version.path }}/" class="active">v{{ site.version.current }}</a></li>
+        <li><a href="{{ site.path }}{{ site.version.path }}/" class="active">v{{ site.version.current }}</a></li>
         <li class="dropdown-divider"></li>
         <li class="dropdown-header">Older</li>
         <li><a href="{{ site.path }}/3.0/">v3.0.5</a></li>
