--- a/site/_includes/layouts/doc.html
+++ b/site/_includes/layouts/doc.html
@@ -13,6 +13,8 @@
         <div class="col-md-3 col-xl-2 cf-sidebar">
             {% include ./partials/sidebar-nav.html %}
         </div>
+        <nav class="d-none d-xl-block col-xl-2 cf-toc-side" aria-label="Page">
+        </nav>
         <main class="col-md-9 col-xl-8 cf-content" role="main">
             <h1 class="cf-title" id="content">{{ title }}{%if subtitle %} <small class="text-muted">{{ subtitle }}</small>{% endif %}</h1>
 
